--- a/src/app/components/admin/list-schedule-admin/list-schedule-admin.component.html
+++ b/src/app/components/admin/list-schedule-admin/list-schedule-admin.component.html
@@ -54,7 +54,7 @@
           'desktop-card': isDesktop    }">
           <ion-card-header>
             <ion-card-subtitle>
-              fecha Creacion: {{formatDate(item.timestamp)}}
+              fecha Modificación: {{formatDate(item.timestamp)}}
             </ion-card-subtitle>
             <ion-card-title text-wrap>
               Evento: {{formatState(item.status)}}
@@ -120,14 +120,35 @@
                 <p>{{item.note}}</p>
               </ion-label>
             </ion-item>
+            <ion-item *ngIf="item.scoreByAdviser" lines="none">
+              <ion-chip [ngClass]="
+                {
+                'background-verde': item.scoreByAdviser === 'verde', 
+                'background-amarillo':  item.scoreByAdviser === 'amarillo',
+                'background-rojo':  item.scoreByAdviser === 'rojo',
+                'background-gris': item.scoreByAdviser === 'gris',
+                'background-azul':  item.scoreByAdviser === 'azul'
+              }">
+                <ion-chip-icon class="icon-chip-detail" name="eye"></ion-chip-icon>
+                <ion-label *ngIf="item.scoreByAdviser ===  'verde'">Poco interés</ion-label>
+                <ion-label *ngIf="item.scoreByAdviser ===  'amarillo'">Oportunidad de venta</ion-label>
+                <ion-label *ngIf="item.scoreByAdviser ===  'rojo'">Venta muy probable</ion-label>
+                <ion-label *ngIf="item.scoreByAdviser ===  'gris'">No hay interés</ion-label>
+                <ion-label *ngIf="item.scoreByAdviser ===  'azul'">Muy bien</ion-label>
+              </ion-chip>
+            </ion-item>
           </ion-card-content>
           <ion-item lines="none">
-            <ion-button *ngIf="!item.administrator" (click)="newEventById(item._id)" color="success" fill="outline"
-              slot="end">
+            <ion-button *ngIf="!item.administrator && !item.personal && user.type === 'adviser' && item.status === 'amarillo' && comparateDate(item.year, item.month, item.day) "
+              (click)="presentAlertVisit(item)" color="warning" fill="outline" slot="end">
+              Calificar <ion-icon name="clipboard"></ion-icon>
+            </ion-button>
+            <ion-button *ngIf="!item.administrator && !item.personal" (click)="newEventById(item._id)" color="success"
+              fill="outline" slot="end">
               Editar <ion-icon name="create"></ion-icon>
             </ion-button>
-            <ion-button *ngIf="item.administrator" (click)="editEventPersonalById(item._id)" color="success" fill="outline"
-              slot="end">
+            <ion-button *ngIf="item.administrator || item.personal " (click)="editEventPersonalById(item._id)" color="success"
+              fill="outline" slot="end">
               Editar Evento Personal <ion-icon name="create"></ion-icon>
             </ion-button>
             <ion-button (click)="presentAlertConfirm(item._id)" color="danger" fill="outline" slot="end">
