--- a/src/app/components/admin/detail-prop-admin/detail-prop-admin.component.html
+++ b/src/app/components/admin/detail-prop-admin/detail-prop-admin.component.html
@@ -174,7 +174,7 @@
 
 </ion-content>
 <!-- fab placed to the bottom end -->
-<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+<ion-fab *ngIf="isLoad && !property.isBuy" vertical="bottom" horizontal="end" slot="fixed">
   <ion-fab-button (click)="presentAlertCheckbox()" color="secondary">
     <ion-icon name="person-add"></ion-icon>
   </ion-fab-button>
