--- a/src/app/components/admin/list-schedule-admin/list-schedule-admin.component.html
+++ b/src/app/components/admin/list-schedule-admin/list-schedule-admin.component.html
@@ -75,6 +75,13 @@
                 <p>{{item.adviser.name}}</p>
               </ion-label>
             </ion-item>
+            <ion-item lines="none" *ngIf="item.seller">
+              <ion-icon slot="start" class="color-item-secondary" name="contact"></ion-icon>
+              <ion-label slot="start" text-wrap>
+                <p><b>Propietario:</b> </p>
+                <p>{{item.seller.name}}</p>
+              </ion-label>
+            </ion-item>
             <ion-item lines="none" *ngIf="item.property">
               <ion-icon slot="start" class="color-item-secondary" name="home"></ion-icon>
               <ion-label slot="start" text-wrap>
