--- a/src/app/components/buyer/detail-prop-buyer/detail-prop-buyer.component.html
+++ b/src/app/components/buyer/detail-prop-buyer/detail-prop-buyer.component.html
@@ -137,4 +137,5 @@
     <ion-spinner name="bubbles"></ion-spinner>
 
   </ng-template>
+  <!-- <button (click)="notification()">algo</button> -->
 </ion-content>
