--- a/src/app/components/maker/new-edit-maker/new-edit-maker.component.html
+++ b/src/app/components/maker/new-edit-maker/new-edit-maker.component.html
@@ -73,7 +73,7 @@
                     {{prop.name}}
                   </mat-option>
                 </mat-select>
-                <mat-error *ngIf="property.dirty || property.touched">Anotar Tipo</mat-error>
+                <mat-error *ngIf="property.dirty || property.touched">Anotar Obra</mat-error>
               </mat-form-field>
             </div>
             <mat-card-actions align="end">
