--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,11 +25,11 @@
                 Cerrar Sesión
               </ion-label>
             </ion-item>
-            <ion-item>
+            <!-- <ion-item>
               <ion-label>
                 {{typeDevice}}
               </ion-label>
-            </ion-item>
+            </ion-item> -->
           </ion-menu-toggle>
         </ion-list>
       </ion-content>
