--- a/src/global.scss
+++ b/src/global.scss
@@ -15,12 +15,15 @@ $mdc-theme-secondary: #f5811e; // secondary color F58634
 app-refre {
   z-index: 0 !important;
 }
+.ion-page-invisible {
+  opacity: 1 !important;
+}
 
-.split-pane-md.split-pane-visible>.split-pane-side {
+.split-pane-md.split-pane-visible > .split-pane-side {
   max-width: 10% !important;
 }
 
-.split-pane-ios.split-pane-visible>.split-pane-side {
+.split-pane-ios.split-pane-visible > .split-pane-side {
   max-width: 10% !important;
 }
 
