--- a/src/app/components/buyer/credit-event-buyer/credit-event-buyer.component.scss
+++ b/src/app/components/buyer/credit-event-buyer/credit-event-buyer.component.scss
@@ -13,3 +13,8 @@
 .state-azul {
     border-left: 4px solid var(--ion-color-blue);
 }
+
+.chips-detail {
+    padding: 15px;
+    font-size: 1.3em;
+}
