--- a/src/app/components/admin/list-schedule-admin/list-schedule-admin.component.html
+++ b/src/app/components/admin/list-schedule-admin/list-schedule-admin.component.html
@@ -94,6 +94,7 @@
               <ion-label slot="start" text-wrap>
                 <p><b>Lugar:</b> </p>
                 <p>{{item.address}}</p>
+                <a [href]="'http://maps.google.com/?q='+item.address+', Puebla'">Ver mapa</a>
               </ion-label>
             </ion-item>
             <ion-item lines="none" *ngIf="item.day">
